listo para produccion

--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -55,7 +55,7 @@
       class="animated rubberBand rk-item ae-masonry__item"
     >
       <img src="assets/productos/{{ producto.url }}.jpg" alt="" />
-      <div class="item-meta">
+      <div [routerLink]="['/item', producto.cod]" class="item-meta">
         <h2>{{ producto.titulo }}</h2>
         <p>{{ producto.categoria }}</p>
       </div>
